# yamid

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs
