[package]
name = "yamid"
version = "0.1.0"
edition = "2021"
authors = ["Vit <vit@conrlab.com>"]
repository = "https://github.com/vsrs/yamid"
description = "Yet Another Machine ID"
license = "Apache-2.0"

[dependencies]
thiserror = "1.0"
uuid = { version = "1.5" }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
apple-sys = { version = "0.2", features = ["IOKit"] }
core-foundation = "0.10"

[features]
serde = ["dep:serde", "uuid/serde"]

[dev-dependencies]
serde_json = "1.0"
